--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,python,macos
+# Created by https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,macos,vim
+# Edit at https://www.toptal.com/developers/gitignore?templates=python,visualstudiocode,jupyternotebooks,macos,vim
+
+### JupyterNotebooks ###
+# gitignore template for Jupyter Notebooks
+# website: http://jupyter.org/
+*.ipynb
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+input/
+output/
+# IPython
+profile_default/
+ipython_config.py
+
+# Remove previous ipynb_checkpoints
+#   git rm -r .ipynb_checkpoints/
 
 ### macOS ###
 # General
@@ -113,11 +128,8 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
 
 # IPython
-profile_default/
-ipython_config.py
 
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
@@ -196,6 +208,32 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+### Python Patch ###
+# Poetry local configuration file - https://python-poetry.org/docs/configuration/#local-configuration
+poetry.toml
+
+
+### Vim ###
+# Swap
+[._]*.s[a-v][a-z]
+!*.svg  # comment out if you don't need vector files
+[._]*.sw[a-p]
+[._]s[a-rt-v][a-z]
+[._]ss[a-gi-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+Sessionx.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
+# Persistent undo
+[._]*.un~
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -215,10 +253,4 @@ cython_debug/
 .history
 .ionide
 
-# Support for Project snippet scope
-.vscode/*.code-snippets
-
-# Ignore code-workspaces
-*.code-workspace
-
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,macos
+# End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode,jupyternotebooks,macos,vim
