--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,11 @@ sh = "^1.14.3"
 pylint = "^2.14.5"
 flake8 = "^4.0.1"
 rope = "^1.3.0"
+pysrt = "^1.1.2"
+click = "^8.1.3"
 
 [tool.poetry.dev-dependencies]
+jupyterlab = "^3.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
